feat: add route to list order status and OrderNotificationPackage not tracked files
