# app/Http/Controllers/Api/V1/Order/OrderStatusController.php
@@ -1,0 +1,68 @@
+<?php
+
+namespace App\Http\Controllers\Api\V1\Order;
+
+use App\Http\Controllers\Controller;
+use App\Models\OrderStatus;
+use Illuminate\Http\JsonResponse;
+use Illuminate\Http\Request;
+use Illuminate\Http\Response;
+
+class OrderStatusController extends Controller
+{
+    /**
+     * @OA\Get(
+     *      path="/order-statuses",
+     *      summary="Get a list of order statuses",
+     *      tags={"OrderStatus"},
+     *      security={{"bearerAuth": {}}},
+     *      @OA\Response(
+     *          response="200",
+     *          description="Successful response",
+     *          @OA\JsonContent(
+     *              type="array",
+     *              @OA\Items(ref="#/components/schemas/OrderStatus")
+     *          )
+     *      ),
+     *  )
+     *
+     * @return \Illuminate\Http\JsonResponse
+     */
+    public function index(): \Illuminate\Http\JsonResponse
+    {
+        $orderStatuses = OrderStatus::all();
+        return response()->json($orderStatuses);
+    }
+
+    /**
+     * @OA\Get(
+     *      path="/order-statuses/{uuid}",
+     *      summary="Get details of a specific order status",
+     *      tags={"OrderStatus"},
+     *      security={{"bearerAuth": {}}},
+     *      @OA\Parameter(
+     *          name="uuid",
+     *          in="path",
+     *          required=true,
+     *          @OA\Schema(
+     *              type="string"
+     *          ),
+     *          description="Order Status uuid"
+     *      ),
+     *      @OA\Response(
+     *          response="200",
+     *          description="Successful response",
+     *          @OA\JsonContent(ref="#/components/schemas/OrderStatus")
+     *      ),
+     *      @OA\Response(response="404", description="Order Status not found"),
+     *  )
+     *
+     * @param string $uuid
+     * @return JsonResponse
+     */
+    public function show(string $uuid): \Illuminate\Http\JsonResponse
+    {
+        $orderStatus = OrderStatus::where('uuid',$uuid)->firstOrFail();
+        return response()->json($orderStatus);
+    }
+}
